syntax = "proto3";

package org.fabri1983.javagrpc.protobuf.converter.proto;

option java_package = "org.fabri1983.javagrpc.protobuf.converter.proto";
option java_outer_classname = "MultiMappingProto";


message MultiMappingFirst {
	int32 intValue = 1;
	int64 longValue = 2;
}

message MultiMappingSecond {
	int32 intValue = 1;
	int64 longValueChanged = 2;
	string unusableValue = 3;
}

message MultiMappingTest {
	MultiMappingFirst multiMappingValue = 1;
	repeated MultiMappingSecond multiMappingListValue = 2;
}